<resources>
    <string name="app_name">MenteSANA (Demo)</string>
    <string name="BotonEntrar">Entrar</string>
    <string name="BotonSalir">Salir</string>
    <string name="BotonContinuar">Continuar</string>
    <string name="BotonFinalizar">Finalizar</string>
    <string name="estar_presentes">Estar presentes</string>
    <string name="aceptacion">Aceptación</string>
    <string name="valores">Valores</string>
    <string name="yo_contextual">Yo contextual</string>
    <string name="accion">Acción</string>
    <string name="title_activity_menu">Menu</string>
    <string name="metafora">Metáfora / video</string>
    <string name="ejercicio">Ejercicio</string>
    <string name="textoDesarrollado">Desarrollado con el apoyo de:\n\nIng. Camilo A. Castañeda G.\nPs. Maria José Ávila Roa</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>